{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 267,
  "lineage": "0d05be25-bb16-ca3d-eda2-884ead83c808",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3c80cca6aef3a8",
            "association_id": "eipassoc-045fda5002f90148d",
            "domain": "vpc",
            "id": "eipalloc-04f3c80cca6aef3a8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f7bbbbac2081919d",
            "private_dns": "ip-10-0-1-116.eu-central-1.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-18-159-95-22.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.95.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ng-1"
            },
            "tags_all": {
              "Name": "eip_ng-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6296cda7e31f169",
            "association_id": "eipassoc-0959e4457f66541ea",
            "domain": "vpc",
            "id": "eipalloc-0b6296cda7e31f169",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-022585e6699fa8499",
            "private_dns": "ip-10-0-2-132.eu-central-1.compute.internal",
            "private_ip": "10.0.2.132",
            "public_dns": "ec2-18-197-170-179.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.170.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ng-2"
            },
            "tags_all": {
              "Name": "eip_ng-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-0083b3556a2ff63a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0083b3556a2ff63a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c4814378b8cb6c9d",
            "private_dns": "ip-10-0-1-98.eu-central-1.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-18-158-61-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.61.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6c009eae6e77446",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e714ec02cfe63f3",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08081974320c7d31e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.Bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-0a54116e6f6255440",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a54116e6f6255440",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00320953a54ee886b",
            "private_dns": "ip-10-0-2-178.eu-central-1.compute.internal",
            "private_ip": "10.0.2.178",
            "public_dns": "ec2-3-127-229-218.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.229.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05090a61419f6f82e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bda2efc2c279eeea",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08081974320c7d31e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.Bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-0362b78825f47dc76",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0362b78825f47dc76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08fc72e273fed4986",
            "private_dns": "ip-10-0-3-188.eu-central-1.compute.internal",
            "private_ip": "10.0.3.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0570c3431cb7ffb5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f62742375ee0447",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b961e8cd391fa52e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.Bastion",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-0a4ee360dc0b6ad77",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4ee360dc0b6ad77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b15d6a231ae141de",
            "private_dns": "ip-10-0-4-161.eu-central-1.compute.internal",
            "private_ip": "10.0.4.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071f3d335c508675e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0132539463c2da069",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b961e8cd391fa52e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.Bastion",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:internet-gateway/igw-0a7a649fe88a570bc",
            "id": "igw-0a7a649fe88a570bc",
            "owner_id": "312895886245",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/6671745dd96551c2",
            "arn_suffix": "app/test/6671745dd96551c2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-1758290814.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/6671745dd96551c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test",
            "security_groups": [
              "sg-0ea86afe3f5f2a8e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e714ec02cfe63f3"
              },
              {
                "subnet_id": "subnet-0bda2efc2c279eeea"
              }
            ],
            "subnets": [
              "subnet-01e714ec02cfe63f3",
              "subnet-0bda2efc2c279eeea"
            ],
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-0a3c4532155777844",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:listener/app/test/6671745dd96551c2/27cbad80bbe25479",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:listener/app/test/6671745dd96551c2/27cbad80bbe25479",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/6671745dd96551c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3",
            "arn_suffix": "targetgroup/alb-target-group/0be62b34c11dc0f3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3-20220209125358271600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3",
            "target_id": "i-0083b3556a2ff63a9"
          },
          "dependencies": [
            "aws_instance.ec2_instances",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.Bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3-20220209125358238100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/0be62b34c11dc0f3",
            "target_id": "i-0a54116e6f6255440"
          },
          "dependencies": [
            "aws_instance.ec2_instances",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.Bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3c80cca6aef3a8",
            "connectivity_type": "public",
            "id": "nat-079be0d5f7b7db289",
            "network_interface_id": "eni-0f7bbbbac2081919d",
            "private_ip": "10.0.1.116",
            "public_ip": "18.159.95.22",
            "subnet_id": "subnet-01e714ec02cfe63f3",
            "tags": {
              "Name": "Nat-gateway-1"
            },
            "tags_all": {
              "Name": "Nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6296cda7e31f169",
            "connectivity_type": "public",
            "id": "nat-0cc844173dd7a0f23",
            "network_interface_id": "eni-022585e6699fa8499",
            "private_ip": "10.0.2.132",
            "public_ip": "18.197.170.179",
            "subnet_id": "subnet-0bda2efc2c279eeea",
            "tags": {
              "Name": "Nat-gateway-2"
            },
            "tags_all": {
              "Name": "Nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-0f7bfffa515abdcd7",
            "id": "rtb-0f7bfffa515abdcd7",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079be0d5f7b7db289",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_nat_gateway.nat_gateways_test",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-0099681787a1f294e",
            "id": "rtb-0099681787a1f294e",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc844173dd7a0f23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_nat_gateway.nat_gateways_test",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-02d21db3bb0ad535e",
            "id": "rtb-02d21db3bb0ad535e",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7a649fe88a570bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ea4da3b0d00280f",
            "route_table_id": "rtb-0f7bfffa515abdcd7",
            "subnet_id": "subnet-08f62742375ee0447"
          },
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_nat_gateway.nat_gateways_test",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed5e18da65ee5635",
            "route_table_id": "rtb-0099681787a1f294e",
            "subnet_id": "subnet-0132539463c2da069"
          },
          "dependencies": [
            "aws_eip.eip_ng",
            "aws_nat_gateway.nat_gateways_test",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a831616da2c157d3",
            "route_table_id": "rtb-02d21db3bb0ad535e",
            "subnet_id": "subnet-01e714ec02cfe63f3"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e16da456dc1d77",
            "route_table_id": "rtb-02d21db3bb0ad535e",
            "subnet_id": "subnet-0bda2efc2c279eeea"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-0b961e8cd391fa52e",
            "description": "Allow SSH on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b961e8cd391fa52e",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.85.251.253/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Security Group",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-0ea86afe3f5f2a8e3",
            "description": "Allow Web Traffic on Ports 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea86afe3f5f2a8e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Unsecure Web Access (HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Application Load Balancer Security Group",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load-Balancer-SG"
            },
            "tags_all": {
              "Name": "Load-Balancer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-08081974320c7d31e",
            "description": "Allow Web Traffic via LoadBalancer and SSH via Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08081974320c7d31e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b961e8cd391fa52e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Unsecure Web Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea86afe3f5f2a8e3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "tags_all": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bastion",
            "aws_security_group.load_balancer_sg",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-08f62742375ee0447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f62742375ee0447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-0132539463c2da069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0132539463c2da069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-01e714ec02cfe63f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e714ec02cfe63f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-0bda2efc2c279eeea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bda2efc2c279eeea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-0a3c4532155777844"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:vpc/vpc-0a3c4532155777844",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a8b167669e0c06f",
            "default_route_table_id": "rtb-05daafe0bf6dfce7d",
            "default_security_group_id": "sg-0116ca8e7e1926142",
            "dhcp_options_id": "dopt-0984ed7574623ca8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a3c4532155777844",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05daafe0bf6dfce7d",
            "owner_id": "312895886245",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            }
          }
        }
      ]
    }
  ]
}